Added handlers for multiple events, get real IP from CF, better docs, introduced config "ONLOOKER_SECURE"
