# controller/level.go
@@ -5,13 +5,14 @@ import (
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/rs/zerolog"
 	leveldomain "github.com/vediagames/onlooker/domain/level"
 )
 
 // CreateLevel godoc
 // @Summary  Creates level object
 // @Produce  json
-// @Tags     level
+// @Tags     level, create
 // @Accept   json
 // @Param    body  body      createLevelRequest  true  "Create level"
 // @Success  200   {object}  createLevelResponse
@@ -26,7 +27,7 @@ func (c controller) CreateLevel(ctx *gin.Context) {
 		return
 	}
 
-	res, err := c.levelService.Create(ctx, leveldomain.CreateRequest{
+	res, err := c.levelService.Create(ctx.Request.Context(), leveldomain.CreateRequest{
 		SessionUUID: req.SessionUUID,
 		Level:       req.Level,
 		ClientTime:  req.ClientTime,
@@ -56,7 +57,7 @@ type createLevelResponse struct {
 // HandleEventDeath godoc
 // @Summary  Logs death of player in level
 // @Produce  json
-// @Tags     level
+// @Tags     level, event, death
 // @Accept   json
 // @Param    body  body      handleEventDeathRequest  true  "Log death"
 // @Success  200   {object}  handleEventDeathResponse
@@ -71,7 +72,7 @@ func (c controller) HandleEventDeath(ctx *gin.Context) {
 		return
 	}
 
-	res, err := c.levelService.LogDeath(ctx, leveldomain.LogDeathRequest{
+	res, err := c.levelService.LogDeath(ctx.Request.Context(), leveldomain.LogDeathRequest{
 		UUID:       req.UUID,
 		ClientTime: req.ClientTime,
 	})
@@ -99,7 +100,7 @@ type handleEventDeathResponse struct {
 // HandleEventComplete godoc
 // @Summary  Logs completion of level
 // @Produce  json
-// @Tags     level
+// @Tags     level, event, complete
 // @Accept   json
 // @Param    body  body      handleEventCompleteRequest  true  "Log completion"
 // @Success  200   {object}  handleEventCompleteResponse
@@ -114,7 +115,7 @@ func (c controller) HandleEventComplete(ctx *gin.Context) {
 		return
 	}
 
-	res, err := c.levelService.LogComplete(ctx, leveldomain.LogCompleteRequest{
+	res, err := c.levelService.LogComplete(ctx.Request.Context(), leveldomain.LogCompleteRequest{
 		UUID:           req.UUID,
 		ClientTime:     req.ClientTime,
 		Achievement:    leveldomain.Achievement(req.Achievement),
@@ -146,7 +147,7 @@ type handleEventCompleteResponse struct {
 // HandleEventUseGrapplingHook godoc
 // @Summary  Logs usage of grappling hook
 // @Produce  json
-// @Tags     level
+// @Tags     level, grappling hook, event
 // @Accept   json
 // @Param    body  body      handleEventUseGrapplingHookRequest  true  "Log grappling hook usage"
 // @Success  200   {object}  handleEventUseGrapplingHookResponse
@@ -161,7 +162,7 @@ func (c controller) HandleEventUseGrapplingHook(ctx *gin.Context) {
 		return
 	}
 
-	res, err := c.levelService.LogGrapplingHookUsage(ctx, leveldomain.LogGrapplingHookUsageRequest{
+	res, err := c.levelService.LogGrapplingHookUsage(ctx.Request.Context(), leveldomain.LogGrapplingHookUsageRequest{
 		UUID:       req.UUID,
 		ClientTime: req.ClientTime,
 	})
@@ -184,4 +185,156 @@ type handleEventUseGrapplingHookRequest struct {
 type handleEventUseGrapplingHookResponse struct {
 	UUID       string    `json:"uuid"`
 	ServerTime time.Time `json:"server_time"`
+}
+
+// HandleEventsComplete godoc
+// @Summary  Logs completion of level
+// @Produce  json
+// @Tags     level, events, complete
+// @Accept   json
+// @Param    body  body      handleEventsCompleteRequest  true  "Log completion"
+// @Success  200   {object}  handleEventsCompleteResponse
+// @Failure  400   {object}  httpError
+// @Failure  404   {object}  httpError
+// @Failure  500   {object}  httpError
+// @Router   /level/events/complete [post]
+func (c controller) HandleEventsComplete(ctx *gin.Context) {
+	var req handleEventsCompleteRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, httpError{Message: err.Error()})
+		return
+	}
+
+	res := handleEventsCompleteResponse{
+		Responses: make([]handleEventCompleteResponse, len(req.Requests)),
+	}
+
+	zerolog.Ctx(ctx.Request.Context()).Info().Msgf("inserting %d events", len(req.Requests))
+
+	for _, r := range req.Requests {
+		logRes, err := c.levelService.LogComplete(ctx.Request.Context(), leveldomain.LogCompleteRequest{
+			UUID:           r.UUID,
+			ClientTime:     r.ClientTime,
+			Achievement:    leveldomain.Achievement(r.Achievement),
+			CompletionTime: time.Duration(r.CompletionTimeSeconds),
+		})
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, httpError{Message: err.Error()})
+			return
+		}
+
+		res.Responses = append(res.Responses, handleEventCompleteResponse{
+			UUID:       logRes.UUID,
+			ServerTime: logRes.ServerTime,
+		})
+	}
+
+	ctx.JSON(http.StatusOK, res)
+}
+
+type handleEventsCompleteRequest struct {
+	Requests []handleEventCompleteRequest `json:"requests"`
+}
+type handleEventsCompleteResponse struct {
+	Responses []handleEventCompleteResponse `json:"responses"`
+}
+
+// HandleEventsDeath godoc
+// @Summary  Logs death of level
+// @Produce  json
+// @Tags     level, death, events
+// @Accept   json
+// @Param    body  body      handleEventsDeathRequest  true  "Log death"
+// @Success  200   {object}  handleEventsDeathResponse
+// @Failure  400   {object}  httpError
+// @Failure  404   {object}  httpError
+// @Failure  500   {object}  httpError
+// @Router   /level/events/death [post]
+func (c controller) HandleEventsDeath(ctx *gin.Context) {
+	var req handleEventsDeathRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, httpError{Message: err.Error()})
+		return
+	}
+
+	res := handleEventsDeathResponse{
+		Responses: make([]handleEventDeathResponse, len(req.Requests)),
+	}
+
+	zerolog.Ctx(ctx.Request.Context()).Info().Msgf("inserting %d events", len(req.Requests))
+
+	for _, r := range req.Requests {
+		logRes, err := c.levelService.LogDeath(ctx.Request.Context(), leveldomain.LogDeathRequest{
+			UUID:       r.UUID,
+			ClientTime: r.ClientTime,
+		})
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, httpError{Message: err.Error()})
+			return
+		}
+
+		res.Responses = append(res.Responses, handleEventDeathResponse{
+			UUID:       logRes.UUID,
+			ServerTime: logRes.ServerTime,
+		})
+	}
+
+	ctx.JSON(http.StatusOK, res)
+}
+
+type handleEventsDeathRequest struct {
+	Requests []handleEventDeathRequest `json:"requests"`
+}
+type handleEventsDeathResponse struct {
+	Responses []handleEventDeathResponse `json:"responses"`
+}
+
+// HandleEventsUseGrapplingHook godoc
+// @Summary  Logs usage of grappling hook
+// @Produce  json
+// @Tags     level, grappling hook, events
+// @Accept   json
+// @Param    body  body      handleEventsUseGrapplingHookRequest  true  "Log grappling hook usage"
+// @Success  200   {object}  handleEventsUseGrapplingHookResponse
+// @Failure  400   {object}  httpError
+// @Failure  404   {object}  httpError
+// @Failure  500   {object}  httpError
+// @Router   /level/events/grappling-hook-usage [post]
+func (c controller) HandleEventsUseGrapplingHook(ctx *gin.Context) {
+	var req handleEventsUseGrapplingHookRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, httpError{Message: err.Error()})
+		return
+	}
+
+	res := handleEventsUseGrapplingHookResponse{
+		Responses: make([]handleEventUseGrapplingHookResponse, len(req.Requests)),
+	}
+
+	zerolog.Ctx(ctx.Request.Context()).Info().Msgf("inserting %d events", len(req.Requests))
+
+	for _, r := range req.Requests {
+		logRes, err := c.levelService.LogGrapplingHookUsage(ctx.Request.Context(), leveldomain.LogGrapplingHookUsageRequest{
+			UUID:       r.UUID,
+			ClientTime: r.ClientTime,
+		})
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, httpError{Message: err.Error()})
+			return
+		}
+
+		res.Responses = append(res.Responses, handleEventUseGrapplingHookResponse{
+			UUID:       logRes.UUID,
+			ServerTime: logRes.ServerTime,
+		})
+	}
+
+	ctx.JSON(http.StatusOK, res)
+}
+
+type handleEventsUseGrapplingHookRequest struct {
+	Requests []handleEventUseGrapplingHookRequest `json:"requests"`
+}
+type handleEventsUseGrapplingHookResponse struct {
+	Responses []handleEventUseGrapplingHookResponse `json:"responses"`
 }
